--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Package to get address info by a brazilian zipcode",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "eslint": "eslint ."
+  },
+  "lint-staged": {
+    "*.js": ["npm run eslint"]
   },
   "repository": {
     "type": "git",
@@ -31,6 +35,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1"
   }
 }
