--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     ],
     "rules": {
         "max-classes-per-file": ["off"],
-        "import/prefer-default-export": ["off"]
+        "import/prefer-default-export": ["off"],
+        "import/extensions": ["off"]
     }
 }
